# pyRobocopy

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  AGENTS.md  GEMINI.md  README.md  index.html  objects.inv  pyproject.toml  search.json  sync_to_monorepo.md  zensical.yml
.github/: dependabot.yml  labels.yml
.github/workflows/: ci.yml  docs.yml  labels.yml  release.yml
dll_etl/robocopy/: __init__.py  core.py  parser.py  runner.py
docs/: index.md  installation.md  limitation.md  references.md  usage.md
docs/stylesheets/: extra.css
installation/: index.html
limitation/: index.html
references/: index.html
robocopy/: __init__.py  cli.py  config.py  error.py  interactive.py  interactive.tcss  parser.py  runner.py  types.py
tests/: conftest.py  test_cli.py  test_config.py  test_conftest.py  test_core.py  test_error.py  test_interactive.py  test_main.py  test_parser.py  test_performance.py  test_progress.py  test_security.py  test_shlex_parsing.py  test_types.py
usage/: index.html
