[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

## #######
# PROJECT
## #######
[project]
name = "pyrobocopy"
version = "1.0.4"
description = "thin python API for Window's robocopy utility"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "tqdm>=4.64" ]
optional-dependencies.dev = [
  "prek>=0.3.10",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "ty>=0.0.34",
]
optional-dependencies.docs = [
  "mkdocstrings[python]",
  "pymdown-extensions",
  "zensical",
]
optional-dependencies.test = [
  "pytest>0",
]
scripts.pyrobocopy = "robocopy.cli:main"
scripts.robocopy = "robocopy.cli:main"

[dependency-groups]
dev = [
  "pyrobocopy[dev,docs,test]",
]

## #####
# TOOL #
## #####
[tool.hatch]
build.targets.wheel.packages = [ "robocopy" ]
