[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

## #######
# PROJECT
## #######
[project]
name = "pyrobocopy"
version = "1.0.5"
description = "thin python API for Window's robocopy utility"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "textual>=8.2.6",
  "tqdm>=4.64",
  "typing-extensions>=4.12; python_full_version<'3.11'",
]
optional-dependencies.dev = [
  "prek>=0.3.13",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "ty>=0.0.35",
]
optional-dependencies.docs = [
  "mkdocstrings[python]",
  "pymdown-extensions",
  "zensical",
]
optional-dependencies.test = [
  "pytest>0",
]
scripts.pyrobocopy = "robocopy.cli:main"
scripts.robocopy = "robocopy.cli:main"

[dependency-groups]
dev = [
  "coverage>=7.14",
  "pyrobocopy[dev,docs,test]",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7.1",
]

## #####
# TOOL #
## #####
[tool.hatch]
build.targets.wheel.packages = [ "robocopy" ]

[tool.coverage]
run.relative_files = true
run.source = [ "robocopy" ]
